# learn-rust-web

./: .editorconfig  .env.example  Cargo.toml  Makefile  README.md  config.toml  log4rs.yaml
docker/: docker-compose.yml  musl.Dockerfile  ubuntu_20_04.Dockerfile
error-handler/: Cargo.toml
error-handler/src/: lib.rs
migrations/: 20230810032347_questions_table.up.sql  20230810033126_answers_tbl.down.sql  20230810033126_answers_tbl.up.sql  20230811060435_accounts_tbl.down.sql  20230811060435_accounts_tbl.up.sql  20230814070558_extend_questions_table.down.sql  20230814070558_extend_questions_table.up.sql  20230814070625_extend_answers_table.up.sql
mock-server/: Cargo.toml
mock-server/src/: lib.rs
src/: main.rs  profanity.rs  store.rs  utils.rs
src/routes/: answers.rs  auth.rs  mod.rs  questions.rs
src/types/: account.rs  answer.rs  mod.rs  paging.rs  question.rs
