[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = {version="0.11.18", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1.0"
uuid = { version = "1.4.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
error-handler = {path="error-handler", version="0.1.0"}
mock-server = {path="mock-server", version="0.1.0"}
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "migrate", "postgres" ] }
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"
chrono = "0.4.26"
rand = "0.8"
rust-argon2 = "1.0"
paseto = "2.0"
config = { version = "0.13.1", features = ["toml"]}
